2002-06-05  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/SkunkWeb/Server.py: added comment at the top to remind
	us that in the event that we add an import, that we add that import
	to _stupidfunc in the bootloader

	* SkunkWeb/SkunkWeb/bootloader.py.in(init): now has some logic
	to produce a true module snapshot that should always do the right
	thing so reload will work

	* SkunkWeb/skunkweb.py.in: adjusted for bootloader change so reload
	should now work properly -- again

2002-06-03  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c: fixed a goof that showed
	up when building against Apache 1 due to a misplaced #endif

2002-05-30  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* pylibs/PyDO/postconn.py: proper handling of date strings where 
	the timezone is GMT+ something as opposed to GMT- something

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c: SkunkWebExclude option 
	now removed for Apache 2.x

2002-05-25  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/__init__.py: now import two more exceptions from
	vfs.py. 

	* pylibs/DT/DT.py (DT.__store_ns, DT.__unstore_ns): fix for
	calling an include from a top-level python document which does not
	have "__t", "__h", or "__d".

2002-05-24  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/httpd/__init__.py, SkunkWeb/Services/aecgi.py:
	add request handler in ServerStart hook, not directly on import.

2002-05-24  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* pylibs/SocketMan/SocketMan.py(SocketMan._reset): now doesn't
	barf if the socket removal fails

	* pylibs/AE/CodeSources.py(updatecache): now attempts to do
	something a bit more intelligent when errors occur during reload

2002-05-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/rewrite.py: forgot to add a check for the case
	when rewrite is loaded before templating in choosing the 404
	handler.
